# draft-stacking-order

./: .clang-format  CMakeLists.txt
autotests/: CMakeLists.txt  StackingOrderTest.cc
src/: CMakeLists.txt  StackingOrder.cc  StackingOrder.h  Toplevel.cc  Toplevel.h  client.cpp  client.h  group.cpp  group.h  stacking_order.cpp  stacking_order.h  toplevel.cpp  toplevel.h  utils.h
